--- a/index.html
+++ b/index.html
@@ -378,6 +378,8 @@
       <span>Email: <a href="mailto:siddharthprabhakar.yt@gmail.com">siddharthprabhakar.yt@gmail.com</a></span>
       <span>Phone: <a href="tel:+91666666666">+91-666 666 666</a></span>
       <span><a href="https://www.linkedin.com/in/siddharth-prabhakar-749a86292/" target="_blank" rel="noopener">LinkedIn</a></span>
+      <span><a href="https://github.com/Siddharth-Prabhakar/SID_PORTFOIO.git" target="_blank" rel="noopener">GIT_Files</a></span>
+      https://github.com/Siddharth-Prabhakar/SID_PORTFOIO.git
       <span><a href="https://github.com/" target="_blank" rel="noopener">GitHub</a></span>
       <span>Location: New Delhi, India</span>
     </div>
